--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "devDependencies": {
+    "@types/node": "^20.10.2",
+    "tslib": "^2.6.2",
     "tsx": "^4.6.2",
     "typescript": "^5.3.2"
   }
